# CloudAgent

./: .env.example  .gitignore  CLAUDE.md  CloudAgent智能客服助手 — 从0到1技术设计文档.docx  README.md  docker-compose.yml  pyproject.toml
cloudagent/: auth.py  cache.py  circuit_breaker.py  config.py  graph.py  hitl.py  main.py  metrics.py  models.py  rate_limit.py  state.py  tenant.py  tenant_context.py
cloudagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cloudagent/agent/: chat_agent.py  rag_agent.py  router.py  workflow_agent.py
cloudagent/api/: sse.py
cloudagent/mcp/: client.py
cloudagent/mcp/servers/: base.py  order.py  sms.py  ticket.py
cloudagent/memory/: cold_store.py  manager.py  redis_store.py  warm_store.py
cloudagent/retrieval/: base.py  graph.py  hybrid.py  keyword.py  vector.py
docs/superpowers/plans/: 2026-04-29-cloudagent-phase1.md  2026-05-01-cloudagent-phase2.md  2026-05-01-cloudagent-phase3.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_auth.py  test_cache.py  test_chat_agent.py  test_chat_agent_stream.py  test_circuit_breaker.py  test_cold_store.py  test_config.py  test_graph.py  test_hitl.py  test_main.py  test_mcp_client.py  test_mcp_servers.py  test_memory_manager.py  test_metrics.py  test_models.py  test_rag_agent.py  test_rate_limit.py  test_redis_store.py  test_router.py  test_sse.py  test_tenant.py  test_warm_store.py  test_workflow_agent.py
tests/fixtures/: seed_faq.json
tests/retrieval/: test_base.py  test_graph.py  test_hybrid.py  test_keyword.py  test_vector.py
(+14 files in other folders)
